syntax="proto3";
package protobuf_messages;

enum MoQtMessageType {
    OBJECT_STREAM = 0x0;
    OBJECT_DATAGRAM = 0x1;
    SUBSCRIBE_UPDATE = 0x2;
    SUBSCRIBE = 0x3;
    SUBSCRIBE_OK = 0x4;
    SUBSCRIBE_ERROR = 0x5;
    ANNOUNCE = 0x6;
    ANNOUNCE_OK = 0x7;
    ANNOUNCE_ERROR = 0x8;
    UNANNOUNCE = 0x9;
    UNSUBSCRIBE = 0xA;
    SUBSCRIBE_DONE = 0xB;
    ANNOUNCE_CANCEL = 0xC;
    TRACK_STATUS_REQUEST = 0xD;
    TRACK_STATUS = 0xE;
    GOAWAY = 0x10;
    CLIENT_SETUP = 0x40;
    SERVER_SETUP = 0x41;
    STREAM_HEADER_TRACK = 0x50;
    STREAM_HEADER_GROUP = 0x51;
};

message ControlMessageHeader {
    MoQtMessageType messageType = 1;
};

enum Role {
    Publisher = 0x00;
    Subscriber = 0x01;
    PubSub = 0x02;
};

message RoleParameter {
    Role role = 1;
};

message PathParameter {
    string path = 1;
};

message ClientSetupMessage {
    message ParamT {
        RoleParameter role = 1;
        PathParameter path = 2;
    };

    uint64 numSupportedVersions = 1;
    repeated uint64 supportedVersions = 2;
    repeated uint64 numberOfParameters = 3;
    repeated ParamT parameters = 4;
};

message ServerSetupMessage {
    message ParamT {
        RoleParameter role = 1;
    };

    uint64 selectedVersion = 1;
    uint64 numberOfParameters = 2;
    repeated ParamT parameters = 3;
};
